feat: implement theme management

--- a/src/index.html
+++ b/src/index.html
@@ -1,22 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <script>
+      // needs to be kept in sync with the theme manager service
+      // TODO - can we share this with the service
+      const THEME_PREFERENCE_STORAGE_KEY = 'themePreference';
 
-<head>
-  <meta charset="utf-8" />
-  <title>Artificer</title>
-  <base href="/" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="icon" type="image/x-icon" href="favicon.ico" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
-    rel="stylesheet">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-</head>
+      try {
+        let theme = localStorage.getItem(THEME_PREFERENCE_STORAGE_KEY);
+        if (theme) {
+          document.documentElement.style.colorScheme = theme;
+        }
+      } catch {}
+    </script>
+    <title>Artificer</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+    />
+  </head>
 
-<body>
-  <arti-root></arti-root>
-</body>
-
+  <body>
+    <arti-root></arti-root>
+  </body>
 </html>
